--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "mitt": "^3.0.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
